--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -37,3 +37,11 @@ jwt.expirationMs=36000000000000
 internal.token=super-secret-sync
 user.service.baseUrl=http://localhost:8081
 
+# RabbitMQ
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Queue pentru sincronizarea auth -> user
+sync.auth.queue=auth.sync.queue
